--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 	"features": {
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers/features/texlive:1": {
-      	"packages": "latex-base texlive-fonts-recommended texlive-latex-extra"}
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 
 	},
 
@@ -18,7 +16,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "make install && source .venv/bin/activate && echo 'source .venv/bin/activate' >> ~/.bashrc",
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra && make install && source .venv/bin/activate && echo 'source .venv/bin/activate' >> ~/.bashrc"
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -30,9 +28,10 @@
 				"GitHub.copilot",
 				"ms-vscode.makefile-tools"
 			]
-  }
+  		}
 	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
+
