--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,10 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 	"features": {
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers/features/font-packages:1": {
-    	"packages": "fonts-freefont-ttf fonts-dejavu-core ttf-mscorefonts-installer"
-  		}
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 
 	},
 
