adding the ability to accept .tex file beside pdf

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,13 +11,17 @@
 	},
 
 	"forwardPorts": [8501],
-	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y curl unzip awscli git-lfs pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-xetex fonts-freefont-ttf && git lfs install && python3 -m venv .venv && source .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && echo 'source .venv/bin/activate' >> ~/.bashrc",
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y curl unzip awscli git-lfs pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-xetex texlive-lang-english texlive-luatex latexmk fonts-freefont-ttf && git lfs install && python3 -m venv .venv && source .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
+	"postStartCommand": "echo 'source .venv/bin/activate' >> ~/.bash_profile && echo 'source .venv/bin/activate' >> ~/.bashrc",
 
 
 
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
+			"settings": {
+				"python.defaultInterpreterPath": ".venv/bin/python"
+			},
 			"extensions": [
 				"ms-python.python",
 				"ms-toolsai.jupyter",
