--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 	},
 
 	"forwardPorts": [8501],
-	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y curl unzip awscli git-lfs pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-xetex texlive-lang-english texlive-luatex latexmk fonts-freefont-ttf && git lfs install && python3 -m venv .venv && source .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y curl unzip awscli git-lfs pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra texlive-xetex texlive-lang-english texlive-luatex latexmk fonts-freefont-ttf && git lfs install && python3 -m venv .venv && source .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
 	"postStartCommand": "echo 'source .venv/bin/activate' >> ~/.bash_profile && echo 'source .venv/bin/activate' >> ~/.bashrc",
 
 
